# grapha

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  nodus.toml
.github/scripts/: package-release.sh
.github/workflows/: ci.yml  release.yml
docs/: README.CN.md
docs/plans/: 2026-04-24-agent-native-code-knowledge-graph.md
grapha/: Cargo.toml
grapha-core/: Cargo.toml
grapha-core/src/: classify.rs  extract.rs  graph.rs  lib.rs  merge.rs  module.rs  normalize.rs  pipeline.rs  plugin.rs  selector.rs  semantic.rs  tree_sitter.rs
grapha-rust/: Cargo.toml
grapha-rust/src/: lib.rs
grapha-swift/: Cargo.toml  build.rs  build_support.rs
grapha-swift/src/: binary.rs  bridge.rs  classifier.rs  graph_pass.rs  indexstore.rs  lib.rs  module_discovery.rs  swiftsyntax.rs  treesitter.rs
grapha-swift/swift-bridge/: Package.resolved  Package.swift
grapha-swift/tests/: build_modes.rs  extract_swift_semantic_parity.rs
grapha/src/: annotation_sync.rs  annotations.rs  assets.rs  cache.rs  changes.rs  classify.rs  concepts.rs  config.rs  data_paths.rs  delta.rs  fields.rs  filter.rs  hash_cache.rs  history.rs  index_status.rs  inferred.rs  lib.rs  localization.rs  main.rs  maintenance.rs  mcp.rs  merge.rs  migration.rs  polyglot_plugin.rs  progress.rs  query.rs  recall.rs  render.rs  rust_plugin.rs  search.rs  serve.rs  snippet.rs  store.rs  symbol_locator.rs  watch.rs
grapha/src/app/: annotation.rs  index.rs  migrate.rs  mod.rs  pipeline.rs  query.rs  serve.rs
grapha/src/classify/: pass.rs  rust.rs
grapha/src/compress/: group.rs  prune.rs
grapha/src/extract/: rust.rs
grapha/src/mcp/: handler.rs  types.rs
grapha/src/query/: arch.rs  complexity.rs  context.rs  dataflow.rs  entries.rs  file_symbols.rs  flow.rs  impact.rs  l10n.rs  localize.rs  map.rs  module_summary.rs  origin.rs  reverse.rs  smells.rs  trace.rs  usages.rs
grapha/src/serve/: api.rs
grapha/src/store/: sqlite.rs
grapha/src/store/sqlite/: compat.rs  read.rs  schema.rs  write.rs
grapha/tests/: dataflow_integration.rs  fields_test.rs  integration.rs  polyglot_test.rs  quality_benchmark.rs  snippet_test.rs
grapha/tests/fixtures/quality/: Cargo.toml  grapha.toml
grapha/tests/fixtures/quality/src/: controller.rs  main.rs  service.rs  ui.rs
src/: changes.rs  error.rs  extract.rs  filter.rs  graph.rs  main.rs  merge.rs  module.rs  query.rs  serve.rs  store.rs
tests/: integration.rs
(+40 files in other folders)
